[MSA 패턴] Config 추가